--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>3.5.2</version>
                         <configuration>
+                            <parallel>methods</parallel>
+                            <threadCount>4</threadCount>
                             <suiteXmlFiles>
                                 <suiteXmlFile>iOS_testing.xml</suiteXmlFile>
                             </suiteXmlFiles>
